# pix128

./: .gitignore  LICENSE  README.md  todo.md
command/: CMakeLists.txt
command/src/: main.cpp
docs/: docs.md
documentation/: documentation.md
engine/template/: engine.toml  index.js  style.css
engines/template/: engine.toml
libraries/template/: index.js  library.toml  style.css
libraries/test/: library.json
templates/template/: .pix128files  css.css  index.html  js.js  template.toml
